# atomq-shot-graph

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  REFERENCES.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
examples/: 01_dual_isotope_feedback.py  02_rearrangement_scaling.py  README.md  _viz_latency.py  _viz_shot_graph.py
src/yaqumo_shot_graph/: __init__.py
src/yaqumo_shot_graph/backends/: __init__.py  ad9910.py  base.py  camera_mock.py  nidaqmx_adapter.py  optical_delay.py  slm_mock.py
src/yaqumo_shot_graph/export/: __init__.py  openqasm3.py  pulser.py
src/yaqumo_shot_graph/ir/: __init__.py  envelopes.py  graph.py  nodes.py  parameter.py  types.py
src/yaqumo_shot_graph/scheduler/: __init__.py  compiler.py
src/yaqumo_shot_graph/sim/: __init__.py  feedback.py  latency_budget.py
tests/: test_ad9910.py  test_backends_base.py  test_camera_mock.py  test_compiler.py  test_envelopes.py  test_examples.py  test_feedback.py  test_ir.py  test_latency_budget.py  test_nidaqmx_adapter.py  test_openqasm3.py  test_optical_delay.py  test_parameter.py  test_placeholder.py  test_pulser.py  test_slm_mock.py
