[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaqumo-shot-graph"
version = "0.0.1"
description = "Typed shot-graph IR and heterogeneous-backend compiler for neutral-atom quantum control"
readme = "README.md"
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "numpy>=1.24",
    "networkx>=3",
]

[project.optional-dependencies]
nidaq = ["nidaqmx>=1.0"]
cocotb = ["cocotb>=1.8"]
export = ["pulser>=0.19", "openqasm3>=1.0"]
viz = ["matplotlib>=3.7", "graphviz>=0.20"]
dev = ["pytest>=8", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/yaqumo_shot_graph"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
